# kevin

./: .gitmodules  .travis.yml  Kevin.hs  Main.hs  README.md  damn.cabal  kevin.cabal
Kevin/: Base.hs  Chatrooms.hs  Protocol.hs  Settings.hs  Types.hs  Version.hs
Kevin/Damn/: Packet.hs  Protocol.hs
Kevin/Damn/Protocol/: Send.hs
Kevin/IRC/: Packet.hs  Protocol.hs
Kevin/IRC/Protocol/: Send.hs
Kevin/Packet/: Damn.hs  IRC.hs
Kevin/Protocol/: Client.hs  Damn.hs  IRC.hs  Server.hs
Kevin/Protocol/Damn/: Send.hs
Kevin/Protocol/IRC/: Send.hs
Kevin/Util/: Entities.hs  Entity.hs  Logger.hs  Tablump.hs  Token.hs
cabal-dev/: cabal.config
config/: deploy.rb
config/deploy/: production.rb  staging.rb
src/: Kevin.hs  Main.hs
src/Kevin/: Base.hs  Chatrooms.hs  Protocol.hs  Settings.hs  Types.hs
src/Kevin/Damn/: Packet.hs  Protocol.hs
src/Kevin/Damn/Protocol/: Send.hs
src/Kevin/IRC/: Packet.hs  Protocol.hs
src/Kevin/IRC/Protocol/: Send.hs
src/Kevin/Util/: Entity.hs  Logger.hs  Tablump.hs  Token.hs
