name:             damn
version:          0.11.0
synopsis:         a dAmn ↔ IRC proxy
description:      a dAmn ↔ IRC proxy
license:          GPL
license-file:     LICENSE
author:           Joel Taylor
maintainer:       me@joelt.io
build-Type:       Simple
cabal-Version:    >=1.10
category:         Utils

source-repository head
    type: git
    location: git://github.com/joelteon/damn.git

executable damn
    main-is:            Main.hs
    default-language:   Haskell2010
    build-depends:      attoparsec,
                        base == 4.*,
                        bytestring,
                        containers,
                        cprng-aes,
                        damnpacket,
                        data-default,
                        HTTP,
                        lens >= 3.10,
                        MonadCatchIO-transformers,
                        mtl,
                        network,
                        regex-pcre-builtin,
                        stm,
                        text,
                        time,
                        tls,
                        tls-extra,
                        trifecta
    other-modules:      Kevin,
                        Kevin.Base,
                        Kevin.Chatrooms,
                        Kevin.Damn.Protocol,
                        Kevin.Damn.Protocol.Send,
                        Kevin.IRC.Packet,
                        Kevin.IRC.Protocol,
                        Kevin.IRC.Protocol.Send,
                        Kevin.Protocol,
                        Kevin.Settings,
                        Kevin.Types,
                        Kevin.Util.Entity,
                        Kevin.Util.Logger,
                        Kevin.Util.Tablump,
                        Kevin.Util.Token,
                        Kevin.Version
    ghc-options:        -Wall -fno-warn-unused-do-bind -threaded -O2
    hs-source-dirs:     src
