Name:             kevin
Version:          0.0
Synopsis:         a dAmn <-> IRC proxy
Description:      a dAmn <-> IRC proxy
License:          GPL
License-file:     LICENSE
Author:           Joel Taylor
Maintainer:       barebonesgraphics@gmail.com
Build-Type:       Simple
Cabal-Version:    >=1.6
Category:         Utils

source-repository head
    type: git
    location: git://github.com/otter/kevin.git

Executable kevin
    Main-is:          Main.hs
    Build-Depends:    attoparsec >= 0.10 && < 0.11, base >= 4 && < 5, bytestring >= 0.9 && < 0.10, containers >= 0.4 && < 0.5, curl >= 1.3 && < 1.4, HTTP >= 4000.2 && < 4000.3, MonadCatchIO-mtl >= 0.3 && < 0.4, mtl >= 2.0 && < 2.1, network >= 2.3 && < 2.4, stm >= 2.3 && < 2.4, tagsoup >= 0.12 && < 0.13, text >= 0.11 && < 0.12
    Other-Modules:    Kevin, Kevin.Protocol, Kevin.Base, Kevin.Util.Logger, Kevin.IRC.Protocol, Kevin.Damn.Protocol, Kevin.Util.Entities, Kevin.Damn.Packet, Kevin.Damn.Protocol.Send, Kevin.IRC.Protocol.Send, Kevin.IRC.Packet, Kevin.Settings, Kevin.Types, Kevin.Util.Token
    extensions:       ScopedTypeVariables, DeriveDataTypeable, OverloadedStrings, ExistentialQuantification, CPP
    ghc-options:      -Wall -fno-warn-unused-do-bind
    cpp-options:      -DVERSION="0.0"