Name:             kevin
Version:          0.3
Synopsis:         a dAmn ↔ IRC proxy
Description:      a dAmn ↔ IRC proxy
License:          GPL
License-file:     LICENSE
Author:           Joel Taylor
Maintainer:       barebonesgraphics@gmail.com
Build-Type:       Simple
Cabal-Version:    >=1.6
Category:         Utils

source-repository head
    type: git
    location: git://github.com/otters/kevin.git

Executable kevin
    Main-is:          Main.hs
    
    Build-Depends:    attoparsec == 0.10.*,
                      base == 4.*,
                      bytestring == 0.9.*,
                      containers == 0.4.*,
                      cprng-aes == 0.3.*,
                      HTTP == 4000.2.*,
                      lens == 3.8.*,
                      MonadCatchIO-transformers == 0.3.*,
                      mtl == 2.1.*,
                      network == 2.4.*,
                      regex-pcre-builtin == 0.94.*,
                      stm == 2.4.*,
                      text == 0.11.*,
                      time == 1.4.*,
                      tls == 1.1.*,
                      tls-extra == 0.6.*
                      
    Other-Modules:    Kevin, Kevin.Protocol, Kevin.Base, Kevin.Util.Logger, Kevin.IRC.Protocol, Kevin.Damn.Protocol, Kevin.Util.Entity, Kevin.Util.Tablump, Kevin.Damn.Packet, Kevin.Damn.Protocol.Send, Kevin.IRC.Protocol.Send, Kevin.IRC.Packet, Kevin.Settings, Kevin.Types, Kevin.Util.Token
    extensions:       CPP, DeriveDataTypeable, ExistentialQuantification, OverloadedStrings, ScopedTypeVariables, TemplateHaskell
    ghc-options:      -Wall -fno-warn-unused-do-bind -threaded
    cpp-options:      -DVERSION="0.3"
