Name:             kevin
Version:          0.9.0
Synopsis:         a dAmn ↔ IRC proxy
Description:      a dAmn ↔ IRC proxy
License:          GPL
License-file:     LICENSE
Author:           Joel Taylor
Maintainer:       joel@otte.rs
Build-Type:       Simple
Cabal-Version:    >=1.10
Category:         Utils

source-repository head
    type: git
    location: git://github.com/joelteon/kevin.git

Executable kevin
    Main-is:            Main.hs

    Default-language:   Haskell2010

    Build-Depends:      attoparsec,
                        base == 4.*,
                        bytestring,
                        containers,
                        cprng-aes,
                        data-default,
                        exceptions,
                        HTTP >= 4000.2,
                        lens >= 3.10,
                        mtl,
                        network,
                        regex-pcre-builtin,
                        stm,
                        text,
                        time,
                        tls,
                        tls-extra

    if impl(ghc<7.7)
      Build-Depends:    primitive >= 0.5

    Other-Modules:      Kevin,
                        Kevin.Base,
                        Kevin.Chatrooms,
                        Kevin.Damn.Packet,
                        Kevin.Damn.Protocol,
                        Kevin.Damn.Protocol.Send,
                        Kevin.IRC.Packet,
                        Kevin.IRC.Protocol,
                        Kevin.IRC.Protocol.Send,
                        Kevin.Protocol,
                        Kevin.Settings,
                        Kevin.Types,
                        Kevin.Util.Entity,
                        Kevin.Util.Logger,
                        Kevin.Util.Tablump,
                        Kevin.Util.Token,
                        Kevin.Version

    ghc-options:        -Wall -fno-warn-unused-do-bind -threaded
